NetBSD Problem Report #44230

From www@NetBSD.org  Mon Dec 13 11:29:02 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 06F2963B883
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 13 Dec 2010 11:29:02 +0000 (UTC)
Message-Id: <20101213112901.D5B4163B87A@www.NetBSD.org>
Date: Mon, 13 Dec 2010 11:29:01 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing close.
X-Send-Pr-Version: www-1.0

>Number:         44230
>Category:       bin
>Synopsis:       Missing close.
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Dec 13 11:30:00 +0000 2010
>Closed-Date:    Mon Dec 13 11:53:27 +0000 2010
>Last-Modified:  Mon Dec 13 11:55:01 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
MIssing close in fwcontrol.
>How-To-Repeat:

>Fix:
diff -u -r1.10 fwcontrol.c
--- usr.sbin/fwctl/fwcontrol.c	26 Aug 2010 07:04:04 -0000	1.10
+++ usr.sbin/fwctl/fwcontrol.c	9 Dec 2010 14:06:37 -0000
@@ -492,6 +492,7 @@
 		fscanf(file, DUMP_FORMAT, p, p+1, p+2, p+3, p+4, p+5, p+6, p+7);
 		p += 8;
 	}
+	fclose(file);
 }

 static void

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: cegger@NetBSD.org
State-Changed-When: Mon, 13 Dec 2010 11:53:27 +0000
State-Changed-Why:
Fix committed. Thanks.


From: "Christoph Egger" <cegger@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44230 CVS commit: src/usr.sbin/fwctl
Date: Mon, 13 Dec 2010 11:51:23 +0000

 Module Name:	src
 Committed By:	cegger
 Date:		Mon Dec 13 11:51:23 UTC 2010

 Modified Files:
 	src/usr.sbin/fwctl: fwcontrol.c

 Log Message:
 PR bin/44230: Missing close.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/usr.sbin/fwctl/fwcontrol.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.