PR bin/44230: Missing close.